Fixed rename of the plugin.

--- a/plugin.ini
+++ b/plugin.ini
@@ -1,5 +1,5 @@
 [info]
-name = "Image OVH"
+name = "Omeka On Ovh"
 author = "Daniel Berthereau"
 description = "Permet de créer les fichiers dérivés sur un serveur OVH."
 license = "CeCILLv2.1"
