Updated for Omeka 2.5.

--- a/plugin.ini
+++ b/plugin.ini
@@ -3,9 +3,9 @@ name = "Omeka On Ovh"
 author = "Daniel Berthereau"
 description = "Permet de créer les fichiers dérivés sur un serveur OVH."
 license = "CeCILLv2.1"
-link = "http://bibliothequedesphares.fr"
-support_link = "http://bibliothequedesphares.fr"
-version = "2.2"
+link = "https://github.com/Daniel-KM/OmekaOnOvh"
+support_link = "https://github.com/Daniel-KM/OmekaOnOvh/issues"
+version = "2.3"
 omeka_minimum_version = "2.2.2"
-omeka_target_version = "2.3"
+omeka_target_version = "2.5"
 tags = "compatibility"
